--- a/checkin.html
+++ b/checkin.html
@@ -1,1 +1,37 @@
-<h1 class='text-2xl'>🛎️ เช็คอิน / เช็คเอาต์ - อยู่ระหว่างพัฒนา</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>StayPlus</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head>
+<body class="bg-gray-100 font-sans">
+  <header class="bg-blue-600 text-white p-4 shadow">
+    <div class="container mx-auto flex justify-between items-center">
+      <h1 class="text-2xl font-bold">StayPlus</h1>
+      <nav class="space-x-4">
+        <a href="index.html" class="hover:underline">หน้าแรก</a>
+        <a href="booking.html" class="hover:underline">จองห้อง</a>
+        <a href="checkin.html" class="hover:underline">เช็คอิน / เอาต์</a>
+        <a href="shop.html" class="hover:underline">ร้านค้า</a>
+        <a href="borrow.html" class="hover:underline">ยืมของ</a>
+        <a href="review.html" class="hover:underline">รีวิว</a>
+      </nav>
+    </div>
+  </header>
+  <main class="container mx-auto p-6 bg-white mt-4 rounded shadow">
+
+    <h2 class="text-2xl font-bold mb-4">🛎️ เช็คอิน / เช็คเอาต์</h2>
+    <form class="space-y-2">
+      <input type="text" placeholder="ชื่อผู้เข้าพัก" class="border p-2 rounded w-full" />
+      <input type="text" placeholder="หมายเลขการจอง" class="border p-2 rounded w-full" />
+      <button class="bg-green-600 text-white p-2 rounded">ดำเนินการ</button>
+    </form>
+
+  </main>
+  <footer class="bg-gray-800 text-white text-center p-4 mt-6">
+    StayPlus © 2025 - แอพจองที่พักครบวงจร
+  </footer>
+</body>
+</html>
