--- a/booking.html
+++ b/booking.html
@@ -1,1 +1,43 @@
-<h1 class='text-2xl'>📅 จองห้องพัก - อยู่ระหว่างพัฒนา</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>StayPlus</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head>
+<body class="bg-gray-100 font-sans">
+  <header class="bg-blue-600 text-white p-4 shadow">
+    <div class="container mx-auto flex justify-between items-center">
+      <h1 class="text-2xl font-bold">StayPlus</h1>
+      <nav class="space-x-4">
+        <a href="index.html" class="hover:underline">หน้าแรก</a>
+        <a href="booking.html" class="hover:underline">จองห้อง</a>
+        <a href="checkin.html" class="hover:underline">เช็คอิน / เอาต์</a>
+        <a href="shop.html" class="hover:underline">ร้านค้า</a>
+        <a href="borrow.html" class="hover:underline">ยืมของ</a>
+        <a href="review.html" class="hover:underline">รีวิว</a>
+      </nav>
+    </div>
+  </header>
+  <main class="container mx-auto p-6 bg-white mt-4 rounded shadow">
+
+    <h2 class="text-2xl font-bold mb-4">📅 ระบบจองห้องพัก</h2>
+    <form class="grid grid-cols-1 md:grid-cols-3 gap-4">
+      <input type="date" placeholder="วันที่เช็คอิน" class="border p-2 rounded" />
+      <input type="date" placeholder="วันที่เช็คเอาต์" class="border p-2 rounded" />
+      <select class="border p-2 rounded">
+        <option>เลือกประเภทห้อง</option>
+        <option>Standard</option>
+        <option>Deluxe</option>
+        <option>Family Suite</option>
+      </select>
+      <button type="submit" class="bg-blue-600 text-white p-2 rounded col-span-1 md:col-span-3">ค้นหาห้องพัก</button>
+    </form>
+
+  </main>
+  <footer class="bg-gray-800 text-white text-center p-4 mt-6">
+    StayPlus © 2025 - แอพจองที่พักครบวงจร
+  </footer>
+</body>
+</html>
