--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>StayPlus - ระบบที่พักครบวงจร</title>
+  <title>StayPlus</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 font-sans">
@@ -20,22 +20,26 @@
       </nav>
     </div>
   </header>
-  <section class="bg-cover bg-center h-64 text-white flex items-center justify-center" style="background-image: url('https://source.unsplash.com/featured/?resort');">
-    <h2 class="text-4xl font-bold drop-shadow">StayPlus - จองง่าย อยู่สบาย ทุกการเข้าพัก</h2>
-  </section>
-  <section class="container mx-auto p-6 bg-white mt-4 rounded shadow text-center">
-    <h3 class="text-xl font-semibold mb-4">🌟 ยินดีต้อนรับสู่ StayPlus</h3>
-    <p class="mb-4">แอพพลิเคชันที่พักครบวงจร ที่จะทำให้การเข้าพักของคุณง่าย สะดวก และมีความสุขที่สุด</p>
-    <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
-      <a href="booking.html" class="bg-blue-500 text-white p-4 rounded shadow hover:bg-blue-600">จองห้องพัก</a>
-      <a href="checkin.html" class="bg-green-500 text-white p-4 rounded shadow hover:bg-green-600">เช็คอิน / เช็คเอาต์</a>
-      <a href="shop.html" class="bg-yellow-500 text-white p-4 rounded shadow hover:bg-yellow-600">ร้านค้าในที่พัก</a>
-      <a href="borrow.html" class="bg-purple-500 text-white p-4 rounded shadow hover:bg-purple-600">ยืมของจากที่พัก</a>
-      <a href="review.html" class="bg-pink-500 text-white p-4 rounded shadow hover:bg-pink-600">รีวิวจากลูกค้า</a>
-    </div>
-  </section>
+  <main class="container mx-auto p-6 bg-white mt-4 rounded shadow">
+
+    <section class="bg-cover bg-center h-64 text-white flex items-center justify-center" style="background-image: url('https://source.unsplash.com/featured/?resort');">
+      <h2 class="text-4xl font-bold drop-shadow">StayPlus - จองง่าย อยู่สบาย ทุกการเข้าพัก</h2>
+    </section>
+    <section class="text-center mt-4">
+      <h3 class="text-xl font-semibold mb-4">🌟 ยินดีต้อนรับสู่ StayPlus</h3>
+      <p class="mb-4">แอพพลิเคชันที่พักครบวงจร ที่จะทำให้การเข้าพักของคุณง่าย สะดวก และมีความสุขที่สุด</p>
+      <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
+        <a href="booking.html" class="bg-blue-500 text-white p-4 rounded shadow hover:bg-blue-600">จองห้องพัก</a>
+        <a href="checkin.html" class="bg-green-500 text-white p-4 rounded shadow hover:bg-green-600">เช็คอิน / เช็คเอาต์</a>
+        <a href="shop.html" class="bg-yellow-500 text-white p-4 rounded shadow hover:bg-yellow-600">ร้านค้าในที่พัก</a>
+        <a href="borrow.html" class="bg-purple-500 text-white p-4 rounded shadow hover:bg-purple-600">ยืมของจากที่พัก</a>
+        <a href="review.html" class="bg-pink-500 text-white p-4 rounded shadow hover:bg-pink-600">รีวิวจากลูกค้า</a>
+      </div>
+    </section>
+
+  </main>
   <footer class="bg-gray-800 text-white text-center p-4 mt-6">
-    StayPlus © 2025 - แอพจองที่พักครบวงจร พร้อมบริการทุกการเข้าพัก
+    StayPlus © 2025 - แอพจองที่พักครบวงจร
   </footer>
 </body>
 </html>
