--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </header>
   <main class="container mx-auto p-6 bg-white mt-4 rounded shadow">
 
-    <section class="bg-cover bg-center h-64 text-white flex items-center justify-center" style="background-image: url('https://source.unsplash.com/featured/?resort');">
+    <section class="bg-cover bg-center h-64 text-white flex items-center justify-center" style="background-image: url('sky.jpg');">
       <h2 class="text-4xl font-bold drop-shadow">StayPlus - จองง่าย อยู่สบาย ทุกการเข้าพัก</h2>
     </section>
     <section class="text-center mt-4">
