--- a/shop.html
+++ b/shop.html
@@ -25,7 +25,7 @@
     <h2 class="text-2xl font-bold mb-4">🛒 ร้านค้าในที่พัก</h2>
     <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
       <div class="bg-gray-100 p-4 rounded text-center">
-        <img src="https://www.bigc.co.th/product/lays-classic-potato-chips-nori-seaweed-flavor-69-g.924?srsltid=AfmBOoqAO6RdnOCtQrGNKh-Tqh-R1HT-frlWOaYqJ0hXZrDWZYT_n8Os" class="mx-auto mb-2" />
+        <img src="snake.jpg" class="mx-auto mb-2" />
         <p>ขนม</p>
         <button class="bg-blue-500 text-white px-2 py-1 rounded mt-2">ซื้อ</button>
       </div>
