--- a/shop.html
+++ b/shop.html
@@ -30,7 +30,7 @@
         <button class="bg-blue-500 text-white px-2 py-1 rounded mt-2">ซื้อ</button>
       </div>
       <div class="bg-gray-100 p-4 rounded text-center">
-        <img src="https://source.unsplash.com/100x100/?coffee" class="mx-auto mb-2" />
+        <img src="coffee.jpg" class="mx-auto mb-2" />
         <p>กาแฟ</p>
         <button class="bg-blue-500 text-white px-2 py-1 rounded mt-2">ซื้อ</button>
       </div>
